# python-verilog-vendor

./: .gitignore  Makefile  __init__.py  pyproject.toml  readme.md
.github/workflows/: update-dist-utils.yml
colors/: ansi.py
file_utils/: __init__.py  hex_file_utils.py  repo_utils.py
shellutils/: __init__.py  console.py  delta.py  which.py
src/utils/colors/: __init__.py  ansi.py
src/utils/file_utils/: fs_utils.py
src/utils/shellutils/: __init__.py
src/utils/system/: __init__.py
system/: nprocs.py  ulimits.py
test/: test_shellutils.py  test_system.py
