# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utils"
version = "0.1.0"
requires-python = ">=3.10"
description = "python helpers for verilog projects"
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-q"
python_files = ["test.py", "test_*.py"]

